--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "express-validator": "5.3.1",
     "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
